Feat: SimulationRecord 반복 횟수, 최근 완료 시간 기능 구현 (#157)